Update README and Dockerfile (#124)
* fix readme code samples to show working examples (#6)

* Update versions referenced in README and improve grammar

* Update Dockerfile and Docker section of README

* Use Amazon Corretto base Docker image

---------

Co-authored-by: Ivan Pavlovic <pavlovic.ivan.26@gmail.com>
Co-authored-by: Jiayu Liu <Jimexist@users.noreply.github.com>